--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "version": "0.0.101",
     "description": "A webpack plugin for generate svg to iconfont.",
     "main": "lib/index.js",
+    "types": "lib/index.d.ts",
     "repository": "git@github.com:edonet/icons-webpack-plugin.git",
     "author": "edonet <edonet@163.com>",
     "license": "MIT",
     "dependencies": {
-        "@airb/fs": "^0.0.103",
-        "@airb/iconfont": "^0.0.105",
-        "memory-webpack-plugin": "^0.0.102"
+        "@ainc/fs": "^0.0.111",
+        "@ainc/iconfont": "^0.0.102",
+        "memory-webpack-plugin": "^0.0.105"
     }
 }
